--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="./css/timeline.css"/>
+
     <!-- Style-->
     <style>
       html, body {
        height:100%;
        padding: 0px;
-       margin: 0px;
+       background-color:#6f6f6f;
       }
     </style>
   </head>
